fx2j-parser/src/test/resources/element/valid/property-element.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <children>
        <VBox/>
    </children>
</VBox>