fx2j-parser/src/test/resources/element/invalid/define-value.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:define>
        value
    </fx:define>
</VBox>